--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	Zoom
 </title>
 <head>
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="zoomroom1.css">
 </head>
 <body>
 	<a href="zoomroom1.html">
