--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 <head>
   <link rel="stylesheet" type="text/css" href="zoomroom1.css">
 </head>
+	<style>
+		body
+{
+	background-image: url"zoom1.jpg";
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+	</style>
 <body>
 	<a href="zoomroom1.html">
 		<IMG STYLE="position:absolute; top: 115px; Left: 30px; WIDTH:525px; HEIGHT:280px "img src="zoomsq.jpg" title="Can you see me?">
